--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -290,45 +290,97 @@ a, li {
     margin: auto;
 }
   
-.prev, .next {
+.prev, .next, .prev_hov, .next_hov {
     cursor: pointer;
     position: absolute;
     top: 50%;
-    width: auto;
-    margin-top: -22px;
+    width: 50px;
+    transform: translate(0%, -50%);
     transition: 0.6s ease;
     user-select: none;
 }
 
+.prev, .prev_hov {
+    left: 10px;
+}
+
+.prev {
+    z-index: 100;
+}
+
+.prev:hover {
+    opacity: 0;
+}
+
+.prev_hov {
+    z-index: 0;
+}
+
+.next, .next_hov {
+    right: 10px;
+}
+
 .next {
-    right: 0;
+    z-index: 100;
+}
+
+.next:hover {
+    opacity: 0;
+}
+
+.next_hov {
+    z-index: 0;
+}
+
+
+.text_slider_bl {
+    position: absolute;
+    right: 60px;
+    bottom: 0;    
+}
+
+.text_slider_bl h3 {
+    background-color: #a7c353;
+    padding: 5px;
+    width: 305px;
+    text-align: center;
+    font-size: 20px;
+    color: #fff;
+    font-family: Georgia;
+    font-weight: normal;
 }
     
-  
-.text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
+.text_slider_bl p {
+    background-color: #ffffff;
+    height: 50px;
+    font-size: 0.9em;
+    outline: none;
+    padding: 5px 10px;
+    border: none;
+    width: 295px;
+    font-family: Georgia;
+    margin-top: 10px;
+    color: #979797;
+    resize: none;
+    margin-bottom: 20px;
 }
   
+
   
 .dot {
     cursor: pointer;
-    height: 15px;
-    width: 15px;
+    height: 12px;
+    width: 12px;
     margin: 0 2px;
-    background-color: #bbb;
+    background-color: #a7c353;
+    border: 3px solid #a7c353;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
 }
   
 .active, .dot:hover {
-    background-color: #717171;
+    background-color: #ffffff;
 }
   
 .fade {
@@ -350,6 +402,69 @@ a, li {
   
 @media only screen and (max-width: 300px) {
     .prev, .next,.text {font-size: 11px}
+}
+
+
+@media(max-width: 820px) {
+    .prev, .next {
+        width: 25px;
+    }
+
+    .dot {
+        cursor: pointer;
+        height: 8px;
+        width: 8px;
+        margin: 0 2px;
+        background-color: #a7c353;
+        border: 2px solid #a7c353;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+    }
+
+    .active, .dot:hover {
+        background-color: #ffffff;
+    }
+
+    .text_slider_bl h3 {
+        background-color: #a7c353;
+        padding: 5px;
+        width: 235px;
+        text-align: center;
+        font-size: 13px;
+        color: #fff;
+        font-family: Georgia;
+        font-weight: normal;
+    }
+        
+    .text_slider_bl p {
+        background-color: #ffffff;
+        height: 45px;
+        font-size: 0.7em;
+        outline: none;
+        padding: 5px 10px;
+        border: none;
+        width: 225px;
+        font-family: Georgia;
+        margin-top: 10px;
+        color: #979797;
+        resize: none;
+        margin-bottom: 20px;
+    }
+
+
+}
+
+@media(max-width: 500px) {
+    .text_slider_bl p{
+        font-size: 0.5em;
+        width: 150px;
+    }
+
+    .text_slider_bl h3 {
+        font-size: 10px;
+        width: 160px;
+    }
 }
 
 /*
@@ -563,7 +678,7 @@ input:focus:-ms-input-placeholder      {opacity: 0; transition: opacity 0.3s eas
 
 #name_con, #email_con, #mess_con {
     background-color: #383838;
-    border-radius: 3px;
+    border-radius: 7px;
     outline: none;
     border: none;
     width: 100%;
@@ -571,6 +686,7 @@ input:focus:-ms-input-placeholder      {opacity: 0; transition: opacity 0.3s eas
     font-family: Georgia;
     padding: 7px;
     margin-bottom: 10px;
+    color: #979797;
 }
 
 #mess_con {
