--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -406,7 +406,7 @@ a, li {
 
 
 @media(max-width: 820px) {
-    .prev, .next {
+    .prev, .next, .prev_hov, .next_hov {
         width: 25px;
     }
 
